--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -38,6 +38,10 @@
     color: #4ea5fe !important;
 }
 
+.status_yellow {
+    color: #FE8732;
+}
+
 // 无数据占位符
 .no-data-img {
     width: 100%;
@@ -47,6 +51,8 @@
         width: 160px;
         display: block;
         margin: 30% auto 0 auto;
+        position: relative;
+        left: 16px;
     }
 
     p {
