--- a/resources/sass/ly/teacher_oa_notices.scss
+++ b/resources/sass/ly/teacher_oa_notices.scss
@@ -237,4 +237,32 @@
   [v-cloak] {
     display: none;
   }
+
+  .drawer_footer {
+    text-align: center;
+    margin-top: 80px;
+  }
+  .el-drawer__body {
+    padding: 20px;
+    .dayu {
+      text-align: right;
+      color: #ccc;
+      font-size: 32px;
+      border-bottom: 1px solid #ccc;
+      cursor: pointer;
+    }
+  }
+  .inner-teacher-drawer {
+    .el-drawer__body {
+
+      padding: 20px;
+    }
+  }
+  .el-tag {
+    color: #fff;
+    background-color: #409EFF;
+  }
+  .el-tag .el-tag__close {
+    color: #fff;
+  }
 }
