通知公告部门代码

--- a/resources/sass/ly/teacher_oa_notices.scss
+++ b/resources/sass/ly/teacher_oa_notices.scss
@@ -261,8 +261,19 @@
   .el-tag {
     color: #fff;
     background-color: #409EFF;
+    .el-tag__close {
+      color: #fff;
+    }
   }
   .el-tag .el-tag__close {
     color: #fff;
+  }
+  .icon {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    right: -7px;
+    top: -9px;
+    cursor: pointer;
   }
 }
