--- a/resources/sass/ly/teacher_oa_notices.scss
+++ b/resources/sass/ly/teacher_oa_notices.scss
@@ -2,18 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  .organ-row {
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 9px;
-    padding-bottom: 10px;
-    .organ-item{
-        margin-right: 30px;
-        cursor: pointer;
-        &:hover{
-            background-color: #b3d8ff;
-        }
-    }
-  }
+
   .notices-card {
     flex: 1;
     height: 100%;
@@ -256,17 +245,13 @@
   }
   .el-drawer__body {
     padding: 20px;
-    .dayu {
-      text-align: right;
-      color: #ccc;
-      font-size: 32px;
-      border-bottom: 1px solid #ccc;
-      cursor: pointer;
+    overflow: auto;
+    .Oran-Tag .el-tag .el-tag__close{
+        color:#fff;
     }
   }
   .inner-teacher-drawer {
     .el-drawer__body {
-
       padding: 20px;
     }
   }
